Fix vertical scroll overflow bug in sidebar

--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -9,6 +9,7 @@
         color: #aaa;
         text-align: left;
         width: 100%;
+        display: block;
     }
 }
 
