--- a/assets/css/_sidebar.scss
+++ b/assets/css/_sidebar.scss
@@ -32,6 +32,7 @@
 .sidebar-nav li {
     line-height: 40px;
     text-indent: 20px;
+    padding: 0 20px;
 }
 
 .sidebar-nav li a {
